--- a/po/it.po
+++ b/po/it.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix Italian translation 17.12.2018\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2025-05-17 11:27+0200\n"
+"POT-Creation-Date: 2025-05-17 14:09+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: ROBERTO BORIOTTI <roberto.boriotti@canon.it>, 2021-2025\n"
 "Language-Team: Italian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
@@ -4391,7 +4391,7 @@ msgstr "Il secondo modo estrae i marcatori e li converte in XML e li scrive nel 
 
 #: src/extract/extract_cli_parser.cpp:92
 #, no-c-format
-msgid "Do not exports track tags."
+msgid "Do not export track tags."
 msgstr ""
 
 #: src/extract/extract_cli_parser.cpp:96
