--- a/po/ca.po
+++ b/po/ca.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix 8.9.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2025-05-17 11:27+0200\n"
+"POT-Creation-Date: 2025-05-17 14:09+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Antoni Bella Pérez <antonibella5@yahoo.com>, 2016-2025\n"
 "Language-Team: Catalan (http://www.transifex.com/moritz-bunkus/mkvtoolnix/"
@@ -4386,7 +4386,7 @@ msgstr "El segon mode extreu les etiquetes, les converteix a XML i les escriu en
 
 #: src/extract/extract_cli_parser.cpp:92
 #, no-c-format
-msgid "Do not exports track tags."
+msgid "Do not export track tags."
 msgstr ""
 
 #: src/extract/extract_cli_parser.cpp:96
