--- a/po/lt.po
+++ b/po/lt.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: mkvtoolnix-4.2.0\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2025-05-17 11:27+0200\n"
+"POT-Creation-Date: 2025-05-17 14:09+0200\n"
 "PO-Revision-Date: 2018-05-02 15:51+0000\n"
 "Last-Translator: Moritz Bunkus <moritz@bunkus.org>\n"
 "Language-Team: Lithuanian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/lt/)\n"
@@ -4398,7 +4398,7 @@ msgstr ""
 
 #: src/extract/extract_cli_parser.cpp:92
 #, no-c-format
-msgid "Do not exports track tags."
+msgid "Do not export track tags."
 msgstr ""
 
 #: src/extract/extract_cli_parser.cpp:96
