--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: pt-BR\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2025-05-17 11:27+0200\n"
+"POT-Creation-Date: 2025-05-17 14:09+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Fúlvio Alves <fga.fulvio@gmail.com>, 2021-2025\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/pt_BR/)\n"
@@ -4379,7 +4379,7 @@ msgstr "O segundo modo extrai as etiquetas, as converte em XML e as grava em um 
 
 #: src/extract/extract_cli_parser.cpp:92
 #, no-c-format
-msgid "Do not exports track tags."
+msgid "Do not export track tags."
 msgstr ""
 
 #: src/extract/extract_cli_parser.cpp:96
