--- a/po/ro.po
+++ b/po/ro.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
-"POT-Creation-Date: 2025-05-17 11:27+0200\n"
+"POT-Creation-Date: 2025-05-17 14:09+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
 "Last-Translator: Daniel <danny3@tutanota.com>, 2016-2018,2021-2022,2025\n"
 "Language-Team: Romanian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ro/)\n"
@@ -4380,7 +4380,7 @@ msgstr ""
 
 #: src/extract/extract_cli_parser.cpp:92
 #, no-c-format
-msgid "Do not exports track tags."
+msgid "Do not export track tags."
 msgstr ""
 
 #: src/extract/extract_cli_parser.cpp:96
