--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -39,7 +39,7 @@ msgstr "92.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 msgid "2025-04-26"
-msgstr ""
+msgstr "26/04/2025"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -655,7 +655,7 @@ msgstr "<option>-T</option>, <option>--no-track-tags</option>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvextract.xml:399
 msgid "Exports only tags that aren't track-specific."
-msgstr ""
+msgstr "Exporta només les etiquetes que no siguin específiques de la pista."
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvextract.xml:406
