--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -13,7 +13,7 @@ msgstr ""
 "Project-Id-Version: MKVToolNix\n"
 "POT-Creation-Date: 2025-05-17 11:19+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
-"Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2024\n"
+"Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2025\n"
 "Language-Team: French (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -42,7 +42,7 @@ msgstr "92.0"
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
 msgid "2025-04-26"
-msgstr ""
+msgstr "26-04-2025"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -658,7 +658,7 @@ msgstr "<option>-T</option>, <option>--no-track-tags</option>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvextract.xml:399
 msgid "Exports only tags that aren't track-specific."
-msgstr ""
+msgstr "N'exporte que les balises qui ne sont pas spécifiques aux pistes."
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvextract.xml:406
