--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -11,7 +11,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: MKVToolNix\n"
-"POT-Creation-Date: 2025-05-17 11:19+0200\n"
+"POT-Creation-Date: 2025-06-14 11:01+0200\n"
 "PO-Revision-Date: 2016-02-03 20:53+0000\n"
 "Last-Translator: tmtisfree <tmtisfree@free.fr>, 2016-2025\n"
 "Language-Team: French (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/fr/)\n"
@@ -32,8 +32,8 @@ msgstr "mkvextract"
 #: doc/man/mkvmerge.xml:6
 #: doc/man/mkvpropedit.xml:6
 #: doc/man/mkvtoolnix-gui.xml:6
-msgid "92.0"
-msgstr "92.0"
+msgid "93.0"
+msgstr "93.0"
 
 #. type: Content of the date entity
 #: doc/man/mkvextract.xml:7
@@ -41,7 +41,9 @@ msgstr "92.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-msgid "2025-04-26"
+#, fuzzy
+#| msgid "2025-04-26"
+msgid "2025-06-14"
 msgstr "26-04-2025"
 
 #. type: Content of the mkvmerge entity
