--- a/doc/man/po4a/po/nb.po
+++ b/doc/man/po4a/po/nb.po
@@ -653,7 +653,7 @@ msgstr "<option>-T</option>, <option>--no-track-tags</option>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvextract.xml:399
 msgid "Exports only tags that aren't track-specific."
-msgstr ""
+msgstr "Eksporterer bare tagger som ikke er spor-spesifikke."
 
 #. type: Content of: <refentry><refsect1><refsect2><para>
 #: doc/man/mkvextract.xml:406
