AUTHORS: add Jason Donenfeld for `<TITLE>` placeholder in chapter name template
part of the implementation of #6151

--- a/AUTHORS
+++ b/AUTHORS
@@ -141,6 +141,10 @@ Jan Mazurczyk <remuxer32@protonmail.com>
 János Madarász <john@madarasz.page>
     * Hungarian translation
 
+Jason Donenfeld <?@?>
+    * <TITLE> placeholder in chapter name generation template when
+      generating chapters when appending files
+
 Jay Alexander Fleming <tito.nehru.naser@gmail.com>
     * Serbian (Cyrillic) translation
 
