AUTHORS: add Rudolf Schnapka as translator for Swedish

--- a/AUTHORS
+++ b/AUTHORS
@@ -306,6 +306,9 @@ Roman Babiy <babiyr@gmail.com>
 Roman Horník <roman.hornik@debian-linux.cz>
     * Czech translation
 
+Rudolf Schnapka <rs@techno-flex.de>
+    * Swedish translation
+
 Sergey Hakobyan <sergey.hakobyan@viragelogic.com>
     * Support for creating missing output directories
     * Using the attachment names in Matroska files for extraction
