--- a/AUTHORS
+++ b/AUTHORS
@@ -141,9 +141,10 @@ Jan Mazurczyk <remuxer32@protonmail.com>
 János Madarász <john@madarasz.page>
     * Hungarian translation
 
-Jason Donenfeld <?@?>
+Jason Donenfeld <Jason@zx2c4.com>
     * <TITLE> placeholder in chapter name generation template when
       generating chapters when appending files
+    * MP4 display matrix extraction (based on ffmpeg)
 
 Jay Alexander Fleming <tito.nehru.naser@gmail.com>
     * Serbian (Cyrillic) translation
