--- a/AUTHORS
+++ b/AUTHORS
@@ -145,6 +145,7 @@ Jason Donenfeld <Jason@zx2c4.com>
     * <TITLE> placeholder in chapter name generation template when
       generating chapters when appending files
     * MP4 display matrix extraction (based on ffmpeg)
+    * The `--date` option in mkvmerge to set the date metadata
 
 Jay Alexander Fleming <tito.nehru.naser@gmail.com>
     * Serbian (Cyrillic) translation
