program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -8913,9 +8913,9 @@ msgid "The strings '<FILE_NAME>' and '<FILE_NAME_WITH_EXT>', which only work whe
 msgstr "Las cadenas de texto'<FILE_NAME>' y '<FILE_NAME_WITH_EXT>', sólo funcionan cuando se generen capítulos para los archivos anexados, serán reemplazadas por el nombre del archivo anexado (la primera omite la extensión mientras que la otra la incluye)."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:336
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The string '<TITLE>', which only work when generating chapters for appended files, will be replaced by the appended file's title if one is set."
-msgstr "Las cadenas de texto'<FILE_NAME>' y '<FILE_NAME_WITH_EXT>', sólo funcionan cuando se generen capítulos para los archivos anexados, serán reemplazadas por el nombre del archivo anexado (la primera omite la extensión mientras que la otra la incluye)."
+msgstr "La cadena '<TITLE>', que solo se usa al generar capítulos para archivos adjuntos, será reemplazada por el título del archivo adjunto, siempre que este último tenga un título definido."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:338
 #, no-c-format
