program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -8838,9 +8838,9 @@ msgid "The strings '<FILE_NAME>' and '<FILE_NAME_WITH_EXT>', which only work whe
 msgstr "Les chaînes '<FILE_NAME>' et '<FILE_NAME_WITH_EXT>', qui ne fonctionnent que lors de la génération de chapitres pour des fichiers concaténés, seront remplacées par le nom de ces fichiers (la deuxième chaîne inclue l'extension du fichier, mais pas la première)."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:336
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The string '<TITLE>', which only work when generating chapters for appended files, will be replaced by the appended file's title if one is set."
-msgstr "Les chaînes '<FILE_NAME>' et '<FILE_NAME_WITH_EXT>', qui ne fonctionnent que lors de la génération de chapitres pour des fichiers concaténés, seront remplacées par le nom de ces fichiers (la deuxième chaîne inclue l'extension du fichier, mais pas la première)."
+msgstr "La chaîne « <TITLE> », qui fonctionne seulement à la génération de chapitres pour les fichiers concaténés, sera remplacée par le titre du fichier concaténé si un est défini."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:338
 #, no-c-format
