program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -8851,9 +8851,9 @@ msgid "The strings '<FILE_NAME>' and '<FILE_NAME_WITH_EXT>', which only work whe
 msgstr "Le stringhe '<FILE_NAME>' e '<FILE_NAME_WITH_EXT>', che funzionano solo quando si generano capitoli per l'aggiunta dei file, verranno sostituite dal nome del file aggiunto (la primo senza estensione mentre la seconda la include)."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:336
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The string '<TITLE>', which only work when generating chapters for appended files, will be replaced by the appended file's title if one is set."
-msgstr "Le stringhe '<FILE_NAME>' e '<FILE_NAME_WITH_EXT>', che funzionano solo quando si generano capitoli per l'aggiunta dei file, verranno sostituite dal nome del file aggiunto (la primo senza estensione mentre la seconda la include)."
+msgstr "La stringa '<TITLE>',  che viene usata solo quando si generano capitoli per i file aggiunti, verrà sostituita, se impostato, dal titolo del file aggiunto."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:338
 #, no-c-format
