program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -8579,9 +8579,9 @@ msgid "The strings '<FILE_NAME>' and '<FILE_NAME_WITH_EXT>', which only work whe
 msgstr "Строки \"<FILE_NAME>\" и \"<FILE_NAME_WITH_EXT>\", которые используются только при создании глав в добавленных файлах, будут заменены на имя добавляемого файла (первая пропускает расширение, в то время как последняя включает его)."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:336
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The string '<TITLE>', which only work when generating chapters for appended files, will be replaced by the appended file's title if one is set."
-msgstr "Строки \"<FILE_NAME>\" и \"<FILE_NAME_WITH_EXT>\", которые используются только при создании глав в добавленных файлах, будут заменены на имя добавляемого файла (первая пропускает расширение, в то время как последняя включает его)."
+msgstr "Строка «<TITLE>», которая работает только при создании разделов для добавленных файлов, будет заменена заголовком добавленного файла, если он задан."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:338
 #, no-c-format
