program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -8814,9 +8814,9 @@ msgid "The strings '<FILE_NAME>' and '<FILE_NAME_WITH_EXT>', which only work whe
 msgstr "Sadece ilave edilmiş dosyalar için bölümler oluşturulurken çalışan '<FILE_NAME>' ve '<FILE_NAME_WITH_EXT>' dizgileri, ilave edilmiş dosyanın adı ile değiştirilecektir (eskisi, harf dahil edilirken uzantıyı bırakır)."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:336
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The string '<TITLE>', which only work when generating chapters for appended files, will be replaced by the appended file's title if one is set."
-msgstr "Sadece ilave edilmiş dosyalar için bölümler oluşturulurken çalışan '<FILE_NAME>' ve '<FILE_NAME_WITH_EXT>' dizgileri, ilave edilmiş dosyanın adı ile değiştirilecektir (eskisi, harf dahil edilirken uzantıyı bırakır)."
+msgstr "Sadece ilave edilmiş dosyalar için bölümler oluşturulurken çalışan '<TITLE>' dizgisi, başlık ayarlanmışsa ilave edilmiş dosyanın başlığı ile değiştirilecektir."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:338
 #, no-c-format
