man page translations: update Spanish

--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -37,10 +37,8 @@ msgstr "94.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2025-04-26"
 msgid "2025-07-27"
-msgstr "26-04-2025"
+msgstr "2025-07-27"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1849,10 +1847,8 @@ msgstr "<literal>%&lt;1-9&gt;n</literal> – nanosegundos con hasta nueve dígit
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:354
-#, fuzzy
-#| msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name without respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
 msgid "The string '<literal>&lt;TITLE&gt;</literal>' is only filled when generating chapters for appended files.  It'll be replaced by the appended file's title if one is present."
-msgstr "Las cadenas <literal>'&lt;FILE_NAME&gt;'</literal> y <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> sólo se rellenan cuando se generan capítulos para los archivos anexados. Serán reemplazados por el nombre del archivo anexado con su extensión, no respectivamente. Tenga en cuenta que sólo se insertan el nombre base y la extensión del archivo, no sus componentes de directorio o unidad."
+msgstr "El texto '<literal>&lt;TITLE&gt;</literal>' solo se rellena al generar los títulos de los capítulos para los archivos adjuntos. En ese caso, será reemplazado por el título del archivo adjunto, si este tiene uno."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:361
