--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -41,10 +41,8 @@ msgstr "94.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2025-04-26"
 msgid "2025-07-27"
-msgstr "26-04-2025"
+msgstr "2025-07-27"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1847,10 +1845,8 @@ msgstr "<literal>%&lt;1-9&gt;n</literal> – nanosecondes avec jusqu'à 9 chiffr
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:354
-#, fuzzy
-#| msgid "The strings <literal>'&lt;FILE_NAME&gt;'</literal> and <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> are only filled when generating chapters for appended files.  They will be replaced by the appended file's name without respectively with its extension.  Note that only the file's base name and extension are inserted, not its directory or drive components."
 msgid "The string '<literal>&lt;TITLE&gt;</literal>' is only filled when generating chapters for appended files.  It'll be replaced by the appended file's title if one is present."
-msgstr "Les chaînes <literal>'&lt;FILE_NAME&gt;'</literal> et <literal>'&lt;FILE_NAME_WITH_EXT&gt;'</literal> sont seulement remplies à la génération de chapitres sont générés pour les fichiers ajoutés. Elles seront remplacées par le nom du fichier ajouté  avec et sans son extension, respectivement. Noter que seuls le nom de base du fichier et l'extension sont insérés, pas son dossier ou les lettres ou composants du lecteur."
+msgstr "La chaîne « <literal>&lt;TITLE&gt;</literal>» est seulement générée à la génération de chapitres pour les fichiers concaténés. Elle sera remplacée par le titre du fichier concaténé si un est défini."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:361
