--- a/AUTHORS
+++ b/AUTHORS
@@ -141,11 +141,9 @@ Jan Mazurczyk <remuxer32@protonmail.com>
 János Madarász <john@madarasz.page>
     * Hungarian translation
 
-Jason Donenfeld <Jason@zx2c4.com>
+Jason Donenfeld <?@?>
     * <TITLE> placeholder in chapter name generation template when
       generating chapters when appending files
-    * MP4 display matrix extraction (based on ffmpeg)
-    * The `--date` option in mkvmerge to set the date metadata
 
 Jay Alexander Fleming <tito.nehru.naser@gmail.com>
     * Serbian (Cyrillic) translation
