translations: mass-replacement of slightly changed formatting

--- a/po/es.po
+++ b/po/es.po
@@ -8981,8 +8981,8 @@ msgstr "%n – nanosegundos con nueve dígitos"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:352
 #, no-c-format
-msgid "%<1-9>n – nanoseconds with up to nine places (e.g. three places with %3n)"
-msgstr "%<1-9>n – nanosegundos hasta nueve dígitos (p.e. tres dígitos con %3n)"
+msgid "%<1-9>n – nanoseconds with up to nine places (e.g. three places with %{}3n)"
+msgstr "%<1-9>n – nanosegundos hasta nueve dígitos (p.e. tres dígitos con %{}3n)"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:354
 #, no-c-format
