--- a/po/ru.po
+++ b/po/ru.po
@@ -8645,8 +8645,8 @@ msgstr "%n – наносекунды с девятью позициями"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:352
 #, no-c-format
-msgid "%<1-9>n – nanoseconds with up to nine places (e.g. three places with %3n)"
-msgstr "%<1-9>n – наносекунды с указанием до девяти позиций (например, с тремя позициями %3n)"
+msgid "%<1-9>n – nanoseconds with up to nine places (e.g. three places with %{}3n)"
+msgstr "%<1-9>n – наносекунды с указанием до девяти позиций (например, с тремя позициями %{}3n)"
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:354
 #, no-c-format
