program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -382,7 +382,7 @@ msgstr "Redirige todos los mensajes de ese archivo."
 #: src/common/cli_parser.cpp:194
 #, no-c-format
 msgid "Disables writing byte order markers to text files."
-msgstr ""
+msgstr "Desactivar la escritura de marcadores de orden de bytes en archivos de texto."
 
 #: src/common/cli_parser.cpp:195
 #, no-c-format
@@ -7078,9 +7078,9 @@ msgstr ""
 "                           Redirige todos los mensajes en este archivo.\n"
 
 #: src/merge/mkvmerge.cpp:412
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "  --no-bom                 Disables writing byte order markers to text files.\n"
-msgstr "  --no-cues                No escribe la información del índice (cue).\n"
+msgstr "--no-bom                 Desactiva la escritura de marcadores de orden de bytes en archivos de texto.\n"
 
 #: src/merge/mkvmerge.cpp:413
 #, no-c-format
