program translations: update French

--- a/po/fr.po
+++ b/po/fr.po
@@ -65,12 +65,12 @@ msgstr "CCIT-J.17"
 #: src/common/audio_emphasis.cpp:53
 #, no-c-format
 msgid "FM radio in Europe"
-msgstr "Radio FM en Europe"
+msgstr "radio FM en Europe"
 
 #: src/common/audio_emphasis.cpp:54
 #, no-c-format
 msgid "FM radio in the USA"
-msgstr "Radio FM aux USA"
+msgstr "radio FM aux USA"
 
 #: src/common/audio_emphasis.cpp:59
 #, no-c-format
@@ -133,12 +133,12 @@ msgstr "Description"
 #: src/common/av1.h:40
 #, no-c-format
 msgid "Raw OBUs without a size field are not supported."
-msgstr "Les OBU (Open Bitstream Units) brutes sans champ de taille ne sont pas prises en charge."
+msgstr "Les unités de flux de données ouvertes (Open Bitstream Units, OBU) brutes sans champ de taille ne sont pas prises en charge."
 
 #: src/common/av1.h:47
 #, no-c-format
 msgid "Encountered OBUs with invalid data."
-msgstr "OBU (Open Bitstream Units) avec données invalides rencontrées."
+msgstr "Unités de flux de données ouvertes (Open Bitstream Units, OBU) avec données invalides rencontrées."
 
 #: src/common/base64.h:28
 #, no-c-format
@@ -213,7 +213,7 @@ msgstr "Les codes de langues à quatre lettres sont réservés à un usage futur
 #: src/common/bcp47.cpp:543
 #, no-c-format
 msgid "Five- to eight-letter language codes are currently not supported."
-msgstr "Les codes de langues de cinq à huit lettres ne sont pas actuellement gérés."
+msgstr "Les codes de langues de cinq à huit lettres ne sont pas actuellement pris en charge."
 
 #: src/common/bitvalue.cpp:72
 #, no-c-format, c++-format
@@ -233,7 +233,7 @@ msgstr "Un chiffre hexadécimal manquant"
 #: src/common/bswap.cpp:27
 #, no-c-format, c++-format
 msgid "The number of bytes to swap isn't divisible by {0}."
-msgstr "Le nombre de bytes à échanger n'est pas divisible par {0}."
+msgstr "Le nombre d'octets à échanger n'est pas divisible par {0}."
 
 #: src/common/chapters/chapters.cpp:59
 #: src/mkvtoolnix-gui/util/settings.cpp:623
@@ -284,60 +284,60 @@ msgstr "Impossible d'ouvrir « {0} » en lecture.\n"
 #: src/common/chapters/chapters.cpp:762
 #, no-c-format, c++-format
 msgid "Unknown chapter file format in '{0}'. It does not contain a supported chapter format.\n"
-msgstr "Format de fichier de chapitrage inconnu dans « {0} ». Ce fichier ne contient pas de format de chapitrage géré.\n"
+msgstr "Format de fichier de chapitrage inconnu dans « {0} ». Ce fichier ne contient pas de format de chapitrage pris en charge.\n"
 
 #: src/common/chapters/chapters.cpp:766
 #: src/common/xml/ebml_chapters_converter.cpp:252
 #, no-c-format, c++-format
 msgid "The XML chapter file '{0}' could not be read.\n"
-msgstr "Le fichier XML de chapitres « {0} » est illisible.\n"
+msgstr "Le fichier XML de chapitres « {0} » est illisible.\n"
 
 #: src/common/chapters/chapters.cpp:768
 #: src/common/xml/ebml_chapters_converter.cpp:255
 #, no-c-format, c++-format
 msgid "The XML chapter file '{0}' contains an error at position {2}: {1}\n"
-msgstr "Le fichier XML de chapitres « {0} » contient une erreur à la position {2} : {1}\n"
+msgstr "Le fichier XML de chapitres « {0} » contient une erreur à la position {2} : {1}\n"
 
 #: src/common/chapters/chapters.cpp:770
 #: src/common/xml/ebml_chapters_converter.cpp:258
 #, no-c-format, c++-format
 msgid "The XML chapter file '{0}' contains an error: {1}\n"
-msgstr "Le fichier XML de chapitres « {0} » contient une erreur : {1}\n"
+msgstr "Le fichier XML de chapitres « {0} » contient une erreur : {1}\n"
 
 #: src/common/chapters/cue_parser.cpp:268
 #, no-c-format, c++-format
 msgid "Cue sheet parser: No INDEX entry found for the previous TRACK entry (current line: {0})\n"
-msgstr "Analyseur de feuille de montage CUE : aucune entrée INDEX trouvée pour l'entrée TRACK précédente (ligne actuelle : {0})\n"
+msgstr "Analyseur de feuille de montage CUE : aucune entrée INDEX trouvée pour l'entrée TRACK précédente (ligne actuelle : {0})\n"
 
 #: src/common/chapters/cue_parser.cpp:387
 #, no-c-format, c++-format
 msgid "Cue sheet parser: Invalid INDEX entry in line {0}.\n"
-msgstr "Analyseur de feuille de montage CUE : entrée INDEX invalide à la ligne {0}.\n"
+msgstr "Analyseur de feuille de montage CUE : entrée INDEX invalide à la ligne {0}.\n"
 
 #: src/common/chapters/cue_parser.cpp:406
 #, no-c-format, c++-format
 msgid "Cue sheet parser: Invalid INDEX number (got {0}, expected {1}) in line {2}.\n"
-msgstr "Analyseur de feuille de montage CUE : numéro INDEX invalide ({0} obtenu, {1} attendu) à la ligne {2},\n"
+msgstr "Analyseur de feuille de montage CUE : numéro INDEX invalide ({0} obtenu, {1} attendu) à la ligne {2}.\n"
 
 #: src/common/chapters/dvd.cpp:133
 #, no-c-format, c++-format
 msgid "'{0}' is not a valid DVD title number."
-msgstr "« {0} » n'est pas un numéro de titre de DVD valide."
+msgstr "« {0} » n'est pas un numéro de titre de DVD valide."
 
 #: src/common/chapters/dvd.cpp:149
 #, no-c-format, c++-format
 msgid "The title number '{0}' is higher than the number of titles on the DVD ({1})."
-msgstr "Le numéro de titre « {0} » est plus élevé que le nombre de titres du DVD ({1})."
+msgstr "Le numéro de titre « {0} » est plus élevé que le nombre de titres du DVD ({1})."
 
 #: src/common/cli_parser.cpp:116
 #, no-c-format, c++-format
 msgid "Missing argument to '{0}'.\n"
-msgstr "Argument manquant pour « {0} ».\n"
+msgstr "Argument manquant pour « {0} ».\n"
 
 #: src/common/cli_parser.cpp:125
 #, no-c-format, c++-format
 msgid "Unknown option '{0}'.\n"
-msgstr "Option inconnue « {0} ».\n"
+msgstr "Option inconnue « {0} ».\n"
 
 #: src/common/cli_parser.cpp:188
 #: src/merge/mkvmerge.cpp:89
@@ -364,17 +364,17 @@ msgstr "Jeu de caractères pour les chaînes de la ligne de commande"
 #: src/common/cli_parser.cpp:192
 #, no-c-format
 msgid "Output messages in this charset"
-msgstr "Messages du rapport dans ce jeu de caractères"
+msgstr "Produire les messages dans ce jeu de caractères"
 
 #: src/common/cli_parser.cpp:193
 #, no-c-format
 msgid "Redirects all messages into this file."
-msgstr "Rediriger tous les messages dans ce fichier."
+msgstr "Redirige tous les messages vers ce fichier."
 
 #: src/common/cli_parser.cpp:194
 #, no-c-format
 msgid "Disables writing byte order markers to text files."
-msgstr ""
+msgstr "Désactive l'écriture de l'indicateur d'ordre des octets dans les fichiers texte."
 
 #: src/common/cli_parser.cpp:195
 #, no-c-format
@@ -411,7 +411,7 @@ msgstr "Afficher les informations de version."
 #: src/propedit/attachment_target.cpp:67
 #, no-c-format, c++-format
 msgid "The file '{0}' could not be opened for reading: {1}.\n"
-msgstr "Le fichier « {0} » ne peut pas être ouvert en lecture : {1}.\n"
+msgstr "Le fichier « {0} » ne peut pas être ouvert en lecture : {1}.\n"
 
 #: src/common/command_line.cpp:61
 #: src/common/command_line.cpp:65
@@ -422,52 +422,52 @@ msgstr "Les fichiers d'options JSON doivent contenir un tableau composé uniquem
 #: src/common/command_line.cpp:120
 #, no-c-format
 msgid "'--command-line-charset' is missing its argument.\n"
-msgstr "L'argument manque à « --command-line-charset ».\n"
+msgstr "Argument manquant à « --command-line-charset ».\n"
 
 #: src/common/command_line.cpp:204
 #, no-c-format
 msgid "'--engage' lacks its argument.\n"
-msgstr "L'argument manque à « --engage ».\n"
+msgstr "Argument manquant à « --engage ».\n"
 
 #: src/common/command_line.cpp:234
 #, no-c-format
 msgid "Missing argument for '--output-charset'.\n"
-msgstr "Argument manquant pour « --output-charset ».\n"
+msgstr "Argument manquant pour « --output-charset ».\n"
 
 #: src/common/command_line.cpp:248
 #, no-c-format, c++-format
 msgid "'{0}' is missing the file name.\n"
-msgstr "« {0} » n'a pas de nom de fichier.\n"
+msgstr "« {0} » n'a pas de nom de fichier.\n"
 
 #: src/common/command_line.cpp:257
 #, no-c-format, c++-format
 msgid "Could not open the file '{0}' for directing the output.\n"
-msgstr "Impossible d'ouvrir le fichier « {0} » pour indiquer la cible.\n"
+msgstr "Impossible d'ouvrir le fichier « {0} » pour indiquer la cible.\n"
 
 #: src/common/command_line.cpp:268
 #, no-c-format
 msgid "Missing argument for '--ui-language'.\n"
-msgstr "Argument manquant pour « --ui-language ».\n"
+msgstr "Argument manquant pour « --ui-language ».\n"
 
 #: src/common/command_line.cpp:271
 #, no-c-format
 msgid "Available translations:\n"
-msgstr "Traductions disponibles :\n"
+msgstr "Traductions disponibles :\n"
 
 #: src/common/command_line.cpp:281
 #, no-c-format, c++-format
 msgid "There is no translation available for '{0}'.\n"
-msgstr "Aucune traduction n'est disponible pour « {0} ».\n"
+msgstr "Aucune traduction n'est disponible pour « {0} ».\n"
 
 #: src/common/common.h:88
 #, no-c-format
 msgid "This should not have happened. Please file an issue at https://mkvtoolnix.download/issues with this error/warning message, a description of what you were trying to do, the command line used and which operating system you are using. Thank you."
-msgstr "Ceci ne devrait pas se produire. Déclarer un bogue à https://mkvtoolnix.download/issues avec ce message d'erreur/avertissement, une description des opérations en cours, la ligne de commande utilisée et le système d'exploitation hôte. Merci."
+msgstr "Cela n'aurait pas dû se produire. Prière de déclarer un bogue à https://mkvtoolnix.download/issues avec ce message d'erreur/avertissement, une description des opérations en cours, la ligne de commande utilisée et le système d'exploitation hôte. Merci."
 
 #: src/common/compression/header_removal.cpp:50
 #, no-c-format, c++-format
 msgid "Header removal compression not possible because the buffer contained {0} bytes which is less than the size of the headers that should be removed, {1}."
-msgstr "Compression par retrait des entêtes impossible car le tampon contenait {0} octets, ce qui est moins que la taille des entêtes qui doivent être retirées, {1}."
+msgstr "Compression par retrait des entêtes impossible car le tampon contenait {0} octets, ce qui est moins que la taille des entêtes devant être retirées, {1}."
 
 #: src/common/compression/header_removal.cpp:63
 #, no-c-format, c++-format
@@ -477,7 +477,7 @@ msgstr "Compression par retrait des entêtes impossible car le tampon ne démarr
 #: src/common/compression/zlib.cpp:37
 #, no-c-format, c++-format
 msgid "inflateInit() failed. Result: {0}\n"
-msgstr "inflateInit() a échoué. Résultat : {0}\n"
+msgstr "Échec de inflateInit(). Résultat : {0}\n"
 
 #: src/common/compression/zlib.cpp:52
 #: src/common/compression/zlib.cpp:90
@@ -488,7 +488,7 @@ msgstr "Échec de décompression zlib. Résultat : {0}\n"
 #: src/common/compression/zlib.cpp:75
 #, no-c-format, c++-format
 msgid "deflateInit() failed. Result: {0}\n"
-msgstr "deflateInit() a échoué. Résultat : {0}\n"
+msgstr "Échec de deflateInit(). Résultat : {0}\n"
 
 #: src/common/content_decoder.cpp:68
 #, no-c-format, c++-format
@@ -503,12 +503,12 @@ msgstr "Type d'encodage des données {0} inconnu pour la piste {1}.\n"
 #: src/common/content_decoder.cpp:85
 #, no-c-format, c++-format
 msgid "Track {0} was compressed with the algorithm '{1}' which is not supported anymore.\n"
-msgstr "La piste {0} a été compressée avec l'algorithme « {1} » qui n'est plus pris en charge.\n"
+msgstr "La piste {0} a été compressée avec l'algorithme « {1} » qui n'est plus pris en charge.\n"
 
 #: src/common/content_decoder.cpp:98
 #, no-c-format, c++-format
 msgid "Track {0} has been compressed with an unknown/unsupported compression algorithm ({1}).\n"
-msgstr "La piste {0} a été compressée avec un algorithme inconnu/non géré ({1}).\n"
+msgstr "La piste {0} a été compressée avec un algorithme inconnu/non pris en charge ({1}).\n"
 
 #: src/common/file_types.cpp:28
 #, no-c-format
@@ -899,17 +899,17 @@ msgstr "WAVPACK"
 #: src/common/flac.cpp:132
 #, no-c-format
 msgid "flac_decoder: FLAC__stream_decoder_new() failed.\n"
-msgstr "flac_decoder : FLAC__stream_decoder_new() a échoué.\n"
+msgstr "flac_decoder : FLAC__stream_decoder_new() a échoué.\n"
 
 #: src/common/flac.cpp:135
 #, no-c-format
 msgid "flac_decoder: Could not set metadata_respond_all.\n"
-msgstr "flac_decoder : impossible de définir metadata_respond_all.\n"
+msgstr "flac_decoder : impossible de définir metadata_respond_all.\n"
 
 #: src/common/flac.cpp:139
 #, no-c-format
 msgid "flac_decoder: Could not initialize the FLAC decoder.\n"
-msgstr "flac_decoder : impossible d'initialiser le décodeur FLAC.\n"
+msgstr "flac_decoder : impossible d'initialiser le décodeur FLAC.\n"
 
 #: src/common/hacks.cpp:33
 #, no-c-format
@@ -6999,9 +6999,9 @@ msgstr ""
 "                           Redirige tous les messages vers ce fichier.\n"
 
 #: src/merge/mkvmerge.cpp:412
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "  --no-bom                 Disables writing byte order markers to text files.\n"
-msgstr "  --no-cues                N'écrit pas les données (l'index) CUE.\n"
+msgstr "  --no-bom                 Désactive l'écriture de les indicateurs d'ordre des octets dans les fichiers texte.\n"
 
 #: src/merge/mkvmerge.cpp:413
 #, no-c-format
@@ -14944,7 +14944,7 @@ msgstr "Nécessaire seulement dans certaines situations :"
 #: src/mkvtoolnix-gui/merge/input.cpp:646
 #, no-c-format
 msgid "for subtitle files that do not use a byte order marker (BOM) and that are not encoded in the system's current character set (%1)"
-msgstr "pour les fichiers de sous-titres qui n'utilisent pas la marque d'ordre des octets (BOM) et qui ne sont pas codés dans le jeu de caractères actuel du système (%1)"
+msgstr "pour les fichiers de sous-titres qui n'utilisent pas l'indicateur d'ordre des octets (BOM) et qui ne sont pas codés dans le jeu de caractères actuel du système (%1)"
 
 #: src/mkvtoolnix-gui/merge/input.cpp:647
 #, no-c-format
