program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -381,7 +381,7 @@ msgstr "Redirigi tutti i messaggi in questo file."
 #: src/common/cli_parser.cpp:194
 #, no-c-format
 msgid "Disables writing byte order markers to text files."
-msgstr ""
+msgstr "Disabilita scrittura nei file di testo indicatori ordine byte."
 
 #: src/common/cli_parser.cpp:195
 #, no-c-format
@@ -7015,9 +7015,9 @@ msgstr ""
 "                           Ridirige tutti i messaggi nel file.\n"
 
 #: src/merge/mkvmerge.cpp:412
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "  --no-bom                 Disables writing byte order markers to text files.\n"
-msgstr "  --no-cues                Non scrive i dati CUE (indice).\n"
+msgstr "  --no-bom                 Disabilita scrittura nei file di testo indicatori ordine byte.\n"
 
 #: src/merge/mkvmerge.cpp:413
 #, no-c-format
