program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -378,7 +378,7 @@ msgstr "Tüm iletileri bu dosya içine yönlendirir"
 #: src/common/cli_parser.cpp:194
 #, no-c-format
 msgid "Disables writing byte order markers to text files."
-msgstr ""
+msgstr "Bayt sırası işaretçilerinin metin dosyalarına yazılmasını etkisizleştirir."
 
 #: src/common/cli_parser.cpp:195
 #, no-c-format
@@ -6987,9 +6987,9 @@ msgstr ""
 "                           Tüm iletileri bu dosya içine yeniden yönlendirir.\n"
 
 #: src/merge/mkvmerge.cpp:412
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "  --no-bom                 Disables writing byte order markers to text files.\n"
-msgstr "  --no-cues                Cue verisini (indeksi) yazma.\n"
+msgstr "  --no-bom                 Bayt sırası işaretçilerinin metin dosyalarına yazılmasını etkisizleştirir.\n"
 
 #: src/merge/mkvmerge.cpp:413
 #, no-c-format
