program translations: update Ukrainian

--- a/po/uk.po
+++ b/po/uk.po
@@ -805,7 +805,7 @@ msgstr "MicroDVD"
 #: src/output/p_mp3.h:43
 #, no-c-format
 msgid "MPEG-1/2 Audio Layer II/III"
-msgstr "Аудио MPEG-1/2 Layer II/III"
+msgstr "Аудіо MPEG-1/2 Layer II/III"
 
 #: src/common/file_types.cpp:94
 #, no-c-format
