--- a/po/es.po
+++ b/po/es.po
@@ -468,9 +468,9 @@ msgid "There is no translation available for '{0}'.\n"
 msgstr "No hay traducción disponible para '{0}'.\n"
 
 #: src/common/common.h:88
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "This should not have happened. Please file an issue at {0} with this error/warning message, a description of what you were trying to do, the command line used and which operating system you are using. Thank you."
-msgstr "Esto no debería haber ocurrido. Por favor, reporte el problema en https://mkvtoolnix.download/issues con este mensaje de error/advertencia, una descripción de lo que estaba intentando hacer, la línea de comandos usada y qué sistema operativo utiliza. Gracias."
+msgstr "Esto no debería haber ocurrido. Por favor, reporte el problema en {0} con este mensaje de error/advertencia, una descripción de lo que intentaba hacer, la línea de comandos usada y el sistema operativo que usa. Gracias."
 
 #: src/common/compression/header_removal.cpp:50
 #, no-c-format, c++-format
@@ -5462,9 +5462,9 @@ msgid "No version number found.\n"
 msgstr "No se encontró ningún número de la versión.\n"
 
 #: src/input/r_vobsub.cpp:132
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "Only v7 and newer VobSub files are supported. If you have an older version then use the VSConv utility from {0} to convert these files to v7 files.\n"
-msgstr "Solo v7 y los archivos VobSub más actuales son compatibles. Si tienes una versión antigua, usa la herramienta VSConv, que puede descargar en http://sourceforge.net/projects/guliverkli/ y así convertir estos archivos al formato v7.\n"
+msgstr "Solo se admiten archivos VobSub, v7 y posteriores. Si tiene una versión anterior, use la utilidad VSConv de {0} para convertir estos archivos a v7.\n"
 
 #: src/input/r_vobsub.cpp:251
 #, no-c-format, c++-format
@@ -5689,9 +5689,9 @@ msgid "Compression failed: {0}\n"
 msgstr "La compresión ha fallado: {0}\n"
 
 #: src/merge/generic_packetizer.cpp:1510
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The current packet's timestamp is smaller than that of the previous packet. This usually means that the source file is a Matroska file that has not been created 100% correctly. The timestamps of all packets will be adjusted by {0}ms in order not to lose any data. This may throw audio/video synchronization off, but that can be corrected with mkvmerge's \"--sync\" option. If you already use \"--sync\" and you still get this warning then do NOT worry -- this is normal. If this error happens more than once and you get this message more than once for a particular track then either is the source file badly mastered, or mkvmerge contains a bug. In this case you should open an issue over on {1}.\n"
-msgstr "El código de tiempo del paquete actual es mas pequeño que el del anterior paquete. Normalmente, significa que el archivo de origen es un archivo Matroska que no ha sido creado correctamente al 100%. Los códigos de tiempo de todos los paquetes serán ajustados por {0}ms a fin de no perder ningún dato. Esto puede deshacer la sincronizacion de audio/vídeo, pero puede ser corregida con la opción de mkvmerge \"--sync\". Si ya usaste \"--sync\" y todavía obtienes este aviso, NO te preocupes, es normal.  Si el error sucede más de una vez, vuelves a obtener este mensaje para una pista en particular, entonces el archivo de origen puede estar mal editado, o MKVmerge tiene un fallo. En ese caso deberías contactar con el autor, Moritz Bunkus <moritz@bunkus.org>.\n"
+msgstr "La marca de tiempo del paquete actual es menor que la del paquete anterior. Esto suele indicar que el archivo fuente es un archivo Matroska que no se ha creado correctamente. Las marcas de tiempo de todos los paquetes se ajustarán en {0} ms para evitar la pérdida de datos. Esto puede afectar la sincronización de audio y vídeo, pero se puede corregir con la opción \"--sync\" de mkvmerge. Si ya usa \"--sync\" y sigue recibiendo esta advertencia, no se preocupe, es normal. Si este error se repite y recibe este mensaje varias veces para una misma pista, es posible que el archivo fuente esté mal masterizado o que mkvmerge contenga un error. En este caso, debería reportar el problema en {1}. \n"
 
 #: src/merge/generic_packetizer.cpp:1803
 #, no-c-format, c++-format
@@ -16551,9 +16551,9 @@ msgid "The audio/video synchronization may have been lost."
 msgstr "La sincronización entre el audio/vídeo puede haberse perdido."
 
 #: src/output/p_ac3.cpp:240
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "ac3_bs_packetizer::add_to_buffer(): Untested code ('size' is odd). If mkvmerge crashes or if the resulting file does not contain the complete and correct audio track, then please open an issue over on {0}.\n"
-msgstr "ac3_bs_packetizer::add_to_buffer(): código no probado (el tamaño es extraño). Si mkvmerge se bloquea o si el archivo generado no contiene la pista de audio correcta y completa, contacta con el autor, Moritz Bunkus, en moritz@bunkus.org.\n"
+msgstr "ac3_bs_packetizer::add_to_buffer(): código no probado (el 'tamaño' es extraño). Si mkvmerge falla o si el archivo resultante no contiene la pista de audio completa y correcta, por favor, reporte el problema en {0}. \n"
 
 #: src/output/p_alac.h:31
 #, no-c-format
