--- a/po/it.po
+++ b/po/it.po
@@ -467,12 +467,9 @@ msgid "There is no translation available for '{0}'.\n"
 msgstr "Nessuna traduzione disponibile per {0}'.\n"
 
 #: src/common/common.h:88
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "This should not have happened. Please file an issue at {0} with this error/warning message, a description of what you were trying to do, the command line used and which operating system you are using. Thank you."
-msgstr ""
-"Questo non sarebbe dovuto accadere. \n"
-"Segnala il problema su https://mkvtoolnix.download/issues con questo messaggio di errore/avviso, una descrizione di ciò che stavi tentando di fare, la riga di comando usata e il sistema operativo in uso. \n"
-"Grazie."
+msgstr "Questo non sarebbe dovuto succedere. Apri una segnalazione a a {0} con questo messaggio di errore/avviso, una descrizione di ciò che stavi tentando di fare, la riga di comando usata e il sistema operativo che stai usando. Grazie."
 
 #: src/common/compression/header_removal.cpp:50
 #, no-c-format, c++-format
@@ -5473,9 +5470,9 @@ msgid "No version number found.\n"
 msgstr "Nessun numero versione rilevato.\n"
 
 #: src/input/r_vobsub.cpp:132
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "Only v7 and newer VobSub files are supported. If you have an older version then use the VSConv utility from {0} to convert these files to v7 files.\n"
-msgstr "Sono supportati solo file VobSub v7 o successiva. Se hai una versione meno recente puoi usare il programma VSConv scaricabile da http://sourceforge.net/projects/guliverkli/ per convertire questi file in file v7.\n"
+msgstr "Sono supportati solo i file VobSub v7 e successivi. Se disponi di una versione precedente, usa il programma VSConv di {0} per convertire questi file in file v7.\n"
 
 #: src/input/r_vobsub.cpp:251
 #, no-c-format, c++-format
@@ -5700,9 +5697,9 @@ msgid "Compression failed: {0}\n"
 msgstr "Compressione non riuscita: {0}\n"
 
 #: src/merge/generic_packetizer.cpp:1510
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The current packet's timestamp is smaller than that of the previous packet. This usually means that the source file is a Matroska file that has not been created 100% correctly. The timestamps of all packets will be adjusted by {0}ms in order not to lose any data. This may throw audio/video synchronization off, but that can be corrected with mkvmerge's \"--sync\" option. If you already use \"--sync\" and you still get this warning then do NOT worry -- this is normal. If this error happens more than once and you get this message more than once for a particular track then either is the source file badly mastered, or mkvmerge contains a bug. In this case you should open an issue over on {1}.\n"
-msgstr "Il timestamp del pacchetto attuale è più piccolo del pacchetto precedente. Questo normalmente significa che il file sorgente è un file Matroska non creato correttamente al 100%. I timestamp di tutti i pacchetti verranno adattati di {0}ms per evitare qualsiasi perdita di dati. Questo potrebbe comportare una desincronizzazione audio/video, che può essere corretta con l'opzione \"--sync\" di mkvmerge. Se stai già usando \"--sync\" e ottieni comunque la notifica NON ti preoccupare - questo è normale. Se questo errore si verifica spesso per una traccia in particolare probabilmente il file è danneggiato, o mkvmerge ha un bug. In questo caso contatta l'autore Moritz Bunkus <moritz@bunkus.org>.\n"
+msgstr "La data/ora del pacchetto attuale è inferiore a quello del pacchetto precedente. Questo di solito significa che il file sorgente è un file Matroska che non è stato creato correttamente al 100%. Per non perdere alcun dato data/ora di tutti i pacchetti verranno regolati di {0}ms. Ciò potrebbe interrompere la sincronizzazione audio/video, ma può essere corretto con l'opzione \"--sync\" di mkvmerge. Se usi già \"--sync\" e ricevi ancora questo avviso, NON preoccuparti: è normale. Se questo errore si verifica più di una volta e ricevi questo messaggio più di una volta per una traccia particolare, il file sorgente è stato creato in modo errato oppure mkvmerge contiene un bug. In questo caso dovresti aprire una segnalazione su {1}.\n"
 
 #: src/merge/generic_packetizer.cpp:1803
 #, no-c-format, c++-format
@@ -16509,9 +16506,9 @@ msgid "The audio/video synchronization may have been lost."
 msgstr "La sincronizzazione audio/video potrebbe essere stata persa."
 
 #: src/output/p_ac3.cpp:240
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "ac3_bs_packetizer::add_to_buffer(): Untested code ('size' is odd). If mkvmerge crashes or if the resulting file does not contain the complete and correct audio track, then please open an issue over on {0}.\n"
-msgstr "ac3_bs_packetizer::add_to_buffer(): codice non testato ('size' è dispari). Se mkvmerge si blocca o se il file risultante non contiene la traccia audio completa e corretta, contatta per favore l'autore Moritz Bunkus all'indirizzo moritz@bunkus.org.\n"
+msgstr "ac3_bs_packetizer::add_to_buffer(): codice non testato ('dimensione' è dispari). Se mkvmerge si arresta in modo anomalo o se il file risultante non contiene la traccia audio completa e corretta, apri una segnalazione su {0}.\n"
 
 #: src/output/p_alac.h:31
 #, no-c-format
