--- a/po/ru.po
+++ b/po/ru.po
@@ -467,9 +467,9 @@ msgid "There is no translation available for '{0}'.\n"
 msgstr "Для \"{0}\" нет подходящего перевода.\n"
 
 #: src/common/common.h:88
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "This should not have happened. Please file an issue at {0} with this error/warning message, a description of what you were trying to do, the command line used and which operating system you are using. Thank you."
-msgstr "Что-то пошло не так. Сообщите о проблеме на https://mkvtoolnix.download/issues с текстом этого сообщения об ошибке/предупреждения, описанием того, что вы пытались сделать, использованной командной строкой и указанием операционной системы. Спасибо."
+msgstr "Этого не должно было произойти. Пожалуйста, сообщите на {0} об этой ошибке / предупреждении, описанием того, что вы пытались сделать, использованной командной строкой и информацией об используемой операционной системе. Спасибо."
 
 #: src/common/compression/header_removal.cpp:50
 #, no-c-format, c++-format
@@ -5466,9 +5466,9 @@ msgid "No version number found.\n"
 msgstr "Номер версии не найден.\n"
 
 #: src/input/r_vobsub.cpp:132
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "Only v7 and newer VobSub files are supported. If you have an older version then use the VSConv utility from {0} to convert these files to v7 files.\n"
-msgstr "Поддерживаются только v7 и более новые файлы VobSub. Если у Вас есть более старая версия, используйте утилиту VSConv с http://sourceforge.net/projects/guliverkli/, чтобы преобразовать эти файлы в v7.\n"
+msgstr "Поддерживаются только файлы VobSub версии 7 и выше. Если у вас более старая версия, используйте инструмент VSConv из {0}, чтобы преобразовать эти файлы в файлы версии 7.\n"
 
 #: src/input/r_vobsub.cpp:251
 #, no-c-format, c++-format
@@ -5693,9 +5693,9 @@ msgid "Compression failed: {0}\n"
 msgstr "Сжатие не выполнено: {0}\n"
 
 #: src/merge/generic_packetizer.cpp:1510
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "The current packet's timestamp is smaller than that of the previous packet. This usually means that the source file is a Matroska file that has not been created 100% correctly. The timestamps of all packets will be adjusted by {0}ms in order not to lose any data. This may throw audio/video synchronization off, but that can be corrected with mkvmerge's \"--sync\" option. If you already use \"--sync\" and you still get this warning then do NOT worry -- this is normal. If this error happens more than once and you get this message more than once for a particular track then either is the source file badly mastered, or mkvmerge contains a bug. In this case you should open an issue over on {1}.\n"
-msgstr "Метка времени текущего пакета меньше, чем у предыдущего пакета. Это обычно означает, что исходный файл представляет собой файл Matroska, созданный не на 100% правильно. Метки времени всех пакетов будут скорректированы на {0}мс, чтобы избежать потери данных. Это может сбить синхронизацию аудио/видео, что может быть исправлено с помощью параметра mkvmerge \"--sync\". Если вы уже используете \"--sync\" и всё равно получаете данное предупреждение, не беспокойтесь — это нормально. Если эта ошибка происходит несколько раз и вы получаете данное сообщение более одного раза для некоторой дорожки, то либо это исходный файл неправильно собран, либо mkvmerge содержит ошибку. В этом случае вам следует связаться с автором Moritz Bunkus <moritz@bunkus.org>.\n"
+msgstr "Метка времени текущего пакета меньше, чем у предыдущего пакета. Это обычно означает, что исходный файл представляет собой файл Matroska, созданный не на 100% правильно. Метки времени всех пакетов будут скорректированы на {0} мс, чтобы избежать потери данных. Это может сбить синхронизацию аудио/видео, что может быть исправлено с помощью параметра mkvmerge \"--sync\". Если вы уже используете \"--sync\", и всё равно получаете данное предупреждение, не беспокойтесь — это нормально. Если эта ошибка происходит несколько раз, и вы получаете данное сообщение более одного раза для некоторой дорожки, то либо это исходный файл неправильно собран, либо mkvmerge содержит ошибку. В этом случае вам следует открыть проблему в {1}.\n"
 
 #: src/merge/generic_packetizer.cpp:1803
 #, no-c-format, c++-format
@@ -16240,9 +16240,9 @@ msgid "The audio/video synchronization may have been lost."
 msgstr "Возможна рассинхронизация аудио и видео потоков"
 
 #: src/output/p_ac3.cpp:240
-#, fuzzy, no-c-format, c++-format
+#, no-c-format, c++-format
 msgid "ac3_bs_packetizer::add_to_buffer(): Untested code ('size' is odd). If mkvmerge crashes or if the resulting file does not contain the complete and correct audio track, then please open an issue over on {0}.\n"
-msgstr "ac3_bs_packetizer::add_to_buffer(): Непроверенный код (\"размер\" нечётный). Если mkvmerge упадёт или если полученный файл не содержит полной и правильной звуковой дорожки, пожалуйста, свяжитесь с автором Moritz Bunkus <moritz@bunkus.org>.\n"
+msgstr "ac3_bs_packetizer::add_to_buffer(): Непроверенный код (\"размер\" нечётный). Если mkvmerge вылетает, или если результирующий файл не содержит полную и правильную звуковую дорожку, пожалуйста, откройте проблему в {0}.\n"
 
 #: src/output/p_alac.h:31
 #, no-c-format
