--- a/AUTHORS
+++ b/AUTHORS
@@ -224,6 +224,10 @@ Mike Matsnev <mike@po.cs.msu.su>
     * Windows implementation for vsscanf
     * The MPEG header generation for VobSub extraction
 
+Miklos Juhasz <juhasz.miklos.1@gmail.com>
+    * macOS: GUI: fix for refreshing widgets after system switches
+      between dark & light modes
+
 Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>
     * Lithuanian translation
 
