--- a/AUTHORS
+++ b/AUTHORS
@@ -227,6 +227,7 @@ Mike Matsnev <mike@po.cs.msu.su>
 Miklos Juhasz <juhasz.miklos.1@gmail.com>
     * macOS: GUI: fix for refreshing widgets after system switches
       between dark & light modes
+    * macOS: GUI: added dock icon progress bar for job queue
 
 Mindaugas Baranauskas <opensuse.lietuviu.kalba@gmail.com>
     * Lithuanian translation
